@@ -1,4 +1,7 @@
 
+2009-04-15  9:41 Ali aliov@xfce.org 
+	 * : Disconnect from all the signals when we reload hal brightness object
+
 2009-04-14 19:19 Ali aliov@xfce.org 
 	 * : Add option to inhibit backlight sleep in the context menu+updates on the battery code
 
